maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:10: error: not found: value etat
    etat = 1
    ^IslandMaze:21: error: not found: value etat
    etat = 0;
    ^IslandMaze:33: error: not found: value suitAGAuche
      case 1 => suitAGAuche();
                ^IslandMaze:35: error: missing parameter type
      case_ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ");
      ^